--- a/web-app/src/main/resources/templates/finance.html
+++ b/web-app/src/main/resources/templates/finance.html
@@ -97,7 +97,7 @@
                 <option value="">Всі типи</option>
                 <option value="INTERNAL_TRANSFER">Переказ між рахунками</option>
                 <option value="EXTERNAL_INCOME">Зовнішній прихід</option>
-                <option value="EXTERNAL_EXPENSE">Зовнішній витрата</option>
+                <option value="EXTERNAL_EXPENSE">Зовнішня витрата</option>
                 <option value="CLIENT_PAYMENT">Оплата клієнту</option>
                 <option value="CURRENCY_CONVERSION">Конвертація валют</option>
             </select>
@@ -175,7 +175,7 @@
                     <option value="">Виберіть тип</option>
                     <option value="INTERNAL_TRANSFER">Переказ між рахунками</option>
                     <option value="EXTERNAL_INCOME">Зовнішній прихід</option>
-                    <option value="EXTERNAL_EXPENSE">Зовнішній витрата</option>
+                    <option value="EXTERNAL_EXPENSE">Зовнішня витрата</option>
                     <option value="CLIENT_PAYMENT">Оплата клієнту</option>
                     <option value="CURRENCY_CONVERSION">Конвертація валют</option>
                 </select>
